--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,10 @@
 * {
-	font-family: montserrat, sans-serif;
+	font-family: monospace, montserrat, sans-serif;
 	box-sizing: border-box;
 }
 
 html, body {
 	margin: 0;
 	height: 100%;
+	background-color: #290429;
 }
