--- a/src/scss/Task.scss
+++ b/src/scss/Task.scss
@@ -8,7 +8,6 @@
 
 	.content {
 		width: 900px;
-		border: 2px solid grey;
 		padding: 10px;
 	}
 
@@ -28,15 +27,20 @@
 
 	li {
 		display: inline-block;
-		margin: 0 10px;
+		margin: 0 20px;
 	}
 
 	li:hover {
 		color: red;
 	}
 
-	.btn {
-		margin: 0 5px;
-		padding: 5px;
+	.active {
+		color: #ab2bab;
+		font-weight: bold;
+		text-shadow: 2px 2px 10px black;
+	}
+
+	a {
+		color: inherit;
 	}
 }
