--- a/front/src/scss/Problemset.scss
+++ b/front/src/scss/Problemset.scss
@@ -18,10 +18,11 @@ $primary-color: #0d0826;
 		align-items: center;
 		border-bottom: 2px solid black;
 		margin-bottom: 1px;
+		transition: 0.3s;
 	}
 
 	.row:hover {
-		background-color: lighten($primary-color, 5%);
+		background-color: lighten($primary-color, 7%);
 	}
 
 	.task-name {
