--- a/front/src/scss/RegisterForm.scss
+++ b/front/src/scss/RegisterForm.scss
@@ -21,8 +21,9 @@
 	}
 
 	.box input[type = "text"], .box input[type = "password"], .box input[type = "email"]  {
+		border: none;
+		border-bottom: 1px solid grey;
 		padding: 10px 40px;
-		border-radius: 10px;
 		outline: none;
 	}
 
